# Scrapegraph-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .releaserc.yml  .semantic-commits-applied  =1.2.5  AgentA-Output.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ClassGenerator.py  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SEMANTIC_COMMITS.md  SERVICES_GUIDE.md  TESTING_INFRASTRUCTURE.md  apt.txt  citation.cff  class_creator.py  class_generator.py  codebeaver.yml  commit_and_push.sh  deploy_on_pip.sh  docker-compose.yml  extract_data.py  extracted_data.py  funding.json  getter.py  html_structure  launcher.py  notebook.ipynb  packages.txt  playwright_scroll.py  pydantic_class.py  (+9 more)
.github/: FUNDING.yml  update-requirements.yml
.github/workflows/: code-quality.yml  codeql.yml  dependency-review.yml  evaluate_pylint_score.py  evaluete_push.yml  pylint.yml  python-publish.yml  release.yml  sphinx_building.yml  test-suite.yml
.streamlit/: config.toml  credentials.toml
.well-known/: funding.json
.well-known/funding-manifest-urls/: funding.json
PullRequests/: PR_1027_reviews.md
aaa/: prova.py
amazscraper/: class_creator.py  class_generator.py  getter.py  pydantic_class.py  request.py  token_calculator.py
classes/: class_generator.py
cookbook/: README.md
docs/: README.md  atlascloud.md  chinese.md  french.md  german.md  italian.md  japanese.md  korean.md  minimax.md  portuguese.md  requirements.txt  russian.md  spanish.md  timeout_configuration.md  troubleshooting.md  turkish.md
docs/assets/: project_overview_diagram.fig
docs/source/: conf.py  index.rst
examples/: .env.example  ADAPTIVE_SCRAPER_README.md  COMPLETE_SOLUTION.md  ScrapeGraphAI_generated_graph  ScrapegraphAI_cookbook.ipynb  adaptive_scrape_results.json  adaptive_speaker_scraper.py  custom_graph.py  custom_graph_domtree.py  custom_graph_example.py  custom_graph_gemini.py  custom_graph_openai.py  custom_graph_rag_example.py  domtree_example.py  enhanced_adaptive_scraper.py  enhanced_scrape_results.json  example.py  example_multichunks.py  faiss_vector.py  fetch_html_node_example.py  graph_builder_example.py  graph_evaluation_example.py  graph_example.py  html_scraping.py  ollama-example.py  readme.md  schema_example.py  scrape_plain_text.py  scrape_vds_speakers.py  scrape_xml_document.py  search_graph_example.py  smart_scraper_example.py  speech_graph_example.py  speech_summary_graph_example.py  usafricaweek_full_result.json  value_scraping.py  values_scraping.py  vds_speakers.json
examples/anthropic/: .env.example  code_generator_graph_anthropic.py  csv_scraper_anthropic.py  csv_scraper_graph_multi_anthropic.py  csv_scraper_graph_multi_haiku.py  csv_scraper_haiku.py  custom_graph_anthropic.py  custom_graph_haiku.py  depth_search_graph_anthropic.py  document_scraper_anthropic.py  json_scraper_anthropic.py  json_scraper_haiku.py  json_scraper_multi_anthropic.py  json_scraper_multi_haiku.py  pdf_scraper_graph_anthropic.py  pdf_scraper_graph_haiku.py  pdf_scraper_multi_anthropic.py  pdf_scraper_multi_haiku.py  rate_limit_anthropic.py  scrape_plain_text_anthropic.py  scrape_plain_text_haiku.py  script_generator_anthropic.py  script_generator_haiku.py  script_multi_generator_anthropic.py  script_multi_generator_haiku.py  search_graph_anthropic.py  search_graph_haiku.py  search_graph_schema_anthropic.py  search_graph_schema_haiku.py  search_link_graph_anthropic.py  search_link_graph_haiku.py  smart_scraper_anthropic.py  smart_scraper_haiku.py  smart_scraper_lite_anthropic.py  smart_scraper_multi_anthropic.py  smart_scraper_multi_concat_anthropic.py  smart_scraper_multi_concat_haiku.py  smart_scraper_multi_haiku.py  smart_scraper_multi_lite_anthropic.py  smart_scraper_schema_anthropic.py  (+5 more)
examples/azure/: code_generator_graph_azure.py  csv_scraper_azure.py  csv_scraper_graph_multi_azure.py  custom_graph_azure.py  depth_search_graph_azure.py  document_scraper_azure.py  json_scraper_azure.py  json_scraper_multi_azure.py  pdf_scraper_azure.py  rate_limit_azure.py  scrape_plain_text_azure.py  script_generator_azure.py  script_multi_generator_azure.py  search_graph_azure.py  (+11 more)
manual deployement/: commit_and_push.sh
manual deployment/: autorequirements.py  commit_and_push.sh  commit_and_push_with_tests.sh  deploy_on_pip.sh  installation.sh  rye_update.sh
scrapegraphai/: __init__.py  _version.py  class_creator.py  class_generator.py  json_getter.py  pydantic_class.py  request.py  token_calculator.py
tests/: QUICKSTART.md  README_TESTING.md  Readme.md  conftest.py  result.json  scrape_plain_text_llama3_test.py  scrape_plain_text_ollama_test.py  scrape_xml_ollama_test.py  script_generator_test.py  smart_scraper_ollama_test.py  test_amaz_scraper.py  test_atlascloud_model.py  test_base_node.py  test_batch_api.py  test_chromium.py  test_cleanup_html.py  test_concat_answers_node.py  test_conf.py  test_convert_to_csv.py  test_convert_to_json.py  test_csv_scraper_multi_graph.py  test_depth_search_graph.py  test_document_scraper_multi_graph.py  test_experimental_backends.py  test_experimental_backends_e2e.py  test_fetch_node_timeout.py  test_generate_answer_node.py  test_json_scraper_graph.py  test_json_scraper_multi_graph.py  test_minimax_models.py  test_models_tokens.py  test_omni_search_graph.py  test_openai_tts.py  test_openrouter_model.py  test_parse_node.py  test_plasmate.py  test_scrape_do.py  test_screenshot_scraper_graph.py  test_script_creator_graph.py  test_script_creator_multi_graph.py  (+9 more)
utils/: class_creator.py  class_generator.py  getter.py  pydantic_class.py
webapp/: docker-compose.yml  run.ps1
webapp/backend/: Dockerfile  pyproject.toml
webapp/backend/app/: schemas.py
webapp/backend/app/routers/: logs.py  models.py  scraping.py
webapp/backend/app/services/: logging_service.py  model_discovery.py  scraper.py
yosoai/: __init__.py  class_creator.py  class_generator.py  convert_to_csv.py  convert_to_json.py  dictionaries.py  getter.py  json_getter.py  pydantic_class.py  remover.py  request.py  token_calculator.py
(+1013 files in other folders)
