[project]
name = "scrapegraphai-web"
version = "0.1.0"
description = "Enterprise-grade web UI for ScrapeGraphAI"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "scrapegraphai @ file:///${PROJECT_ROOT}",
    "crawl4ai>=0.8.0",
]

[project.optional-dependencies]
dev = ["httpx", "pytest"]
